Fixed navbar spacing and colorizations

--- a/src/components/DogCard/dogcard.css
+++ b/src/components/DogCard/dogcard.css
@@ -15,7 +15,7 @@ img {
 }
   
 .dogBreed {
-    color: rgb(100, 150, 150);
+    color: rgb(83, 131, 88);
     font-weight: 700;
 }
   
