--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .pageLinks {
-    background: rgb(99, 212, 113);
+    background: rgb(83, 131, 88);
     width: 100%;
     height: 85px;
     display: flex;
@@ -8,16 +8,16 @@
 }
 
 .pageLink {
-    color: rgb(231, 231, 231);
+    color: rgb(0, 0, 0);
     font-size: 1.125rem;
     font-weight: 600;
-    background: rgb(0, 0, 0);
     display: flex;
     align-items: center;
+    justify-content: center;
     text-decoration: none;
     margin-right: 1rem;
-    padding: 0 2rem;
     height: 100%;
+    width: 150px;
     cursor: pointer;
 }
 
