--- a/src/components/adoptButton/adoptbutton.css
+++ b/src/components/adoptButton/adoptbutton.css
@@ -1,7 +1,7 @@
 .adoptionBtn {
     text-decoration: none;
     font-weight: 700;
-    color: rgb(50, 170, 170);
+    color: rgb(83, 131, 88);
     background: none;
     border: 2px solid black;
     border-radius: 10px;
